problem5 구현 완료. 추후 코딩 컨벤션에 따라 코드 리팩토링 예정입니다.